--- a/artes-culinarias.html
+++ b/artes-culinarias.html
@@ -48,7 +48,7 @@
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p>El curso de Artes Culinarias, en la actualidad, es uno de los de mayor demanda ocupacional. La industria de los alimentos está en crecimiento a nivel mundial y, las oportunidades son muchas y variadas. A través del curso, se pretende lograr la capacitación y el desarrollo de destrezas que les permitan a sus estudiantes desempeñarse con seguridad y profesionalismo. El currículo de Artes Culinarias ofrece aspectos básicos relacionados con la historia de la gastronomía e higiene de los empleados, enfermedades transmitidas por alimentos, planificación y uso efectivo del tiempo, confección de menús variados, interpretación  de recetas, selección y conservación de los utensilios de cocina, compra y almacenaje, apricación de principios de cocinas, así como, otros conocimientos.
+      <p>El curso de Artes Culinarias, en la actualidad, es uno de los de mayor demanda ocupacional. La industria de los alimentos está en crecimiento a nivel mundial y, las oportunidades son muchas y variadas. A través del curso, se pretende lograr la capacitación y el desarrollo de destrezas que les permitan a sus estudiantes desempeñarse con seguridad y profesionalismo. El currículo de Artes Culinarias ofrece aspectos básicos relacionados con la historia de la gastronomía e higiene de los empleados, enfermedades transmitidas por alimentos, planificación y uso efectivo del tiempo, confección de menús variados, interpretación  de recetas, selección y conservación de los utensilios de cocina, compra y almacenaje, aplicación de principios de cocinas, así como, otros conocimientos.
     </div>
     
     <!-- Requisitos -->
