--- a/computec.html
+++ b/computec.html
@@ -48,19 +48,19 @@
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p>El curso de COMPUTEC se especializa principalmente en diagnóstico, reparación y mantenimiento de computadoras. Incluye administración de redes, resolución de problemas tecnológicos incluyendo conexión a internet, impresoras, recuperación de datos, etc. Conceptos sobre computación en nube y programación básica en lenguajes de alta demanda en el campo laboral implementando los objetivos de nuestra organización profesional SkillsuSA.
+      <p>El curso de COMPUTEC se especializa principalmente en diagnóstico, reparación y mantenimiento de computadoras. Incluye administración de redes, resolución de problemas tecnológicos incluyendo conexión a internet, impresoras, recuperación de datos, etc. Conceptos sobre computación en nube y programación básica en lenguajes de alta demanda en el campo laboral implementando los objetivos de nuestra organización profesional SkillsUSA.
 
       </p>Adicional, integramos una introducción a la Inteligencia Artificial y su buen uso en el aprendizaje. El "Cybersecurity" y la Ingeniería Social que son prioridad en la seguridad informática ya que estamos cada día más vulnerables a fraudes, fundamentos de impresora 3D y aprendizaje inmersivo mediante la realidad virtual y los principios del metaverso.</p>
 
-Todos estos conceptos los integramos para poder así enseñar el manejo de la tecnología de una manera actualizada y funcional en el diario vivir y en la demanda</p>
+Todos estos conceptos los integramos para poder así enseñar el manejo de la tecnología de una manera actualizada y funcional en el diario vivir y en la demanda.</p>
     </div>
 
     <!-- Requisitos -->
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.50 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Interes en aprender tecnologia</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio 2.50 en adelante</li>
+        <li><i class="fas fa-birthday-cake"></i>Interes en aprender tecnología</li>
         <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
       </ul>
     </div>
