--- a/cosmetologia.html
+++ b/cosmetologia.html
@@ -64,8 +64,8 @@ Al finalizar el curso, el estudiante completa un certiticado de horas trabajadas
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.00 o más y debe completar el 8vo grado.</li>
-        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre cosmetología.</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio 2.00 o más y debe completar el 8vo grado.</li>
+        <li><i class="fas fa-birthday-cake"></i>Interés en aprender sobre cosmetología.</li>
         <li><i class="fas fa-handshake"></i>Entrevista de admisión.</li>
       </ul>
     </div>
