--- a/elaboracion-agricolas.html
+++ b/elaboracion-agricolas.html
@@ -56,7 +56,7 @@
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Duración del curso</h3>
-      <p>El curso está diseñado para ofrecerse durante los grados 10mo, 11mo y 12mo, donde el estudiante acumula 1,000 horas. El curso se ofrece a estudiantes de corriente regular y Educacion Especial.</p>
+      <p>El curso está diseñado para ofrecerse durante los grados 10mo, 11mo y 12mo, donde el estudiante acumula 1,000 horas. El curso se ofrece a estudiantes de corriente regular y Educación Especial.</p>
     </div>
 
 
@@ -66,7 +66,7 @@
   <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
   <ul class="feature-list text-center">
  
-    <li><i class="fas fa-chart-line"></i>Mantener un promedio académico mínimo de 2.00 puntos o más y completar el 9no. Grado y pasar por el proceso de entrevista.</li>
+    <li><i class="fas fa-chart-line"></i>Mantener un promedio académico mínimo de 2.00 puntos o más y completar el 9no grado y pasar por el proceso de entrevista.</li>
        <li><i class="fas fa-chart-line"></i><p>El curso no discrimina por razones de género.</ul></div></p>
 </li>
   </ul>
@@ -88,15 +88,15 @@
       <div class="row">
         <div class="col-12">
           <ul class="feature-list text-center">
-        <strong><p> La terminología relacionada a la ocupación:</p></strong> 
-            <li><i class="fas fa-cogs"></i>Narrará el origen, la historia y el desarrollo de la ocupación.</li>
-            <li><i class="fas fa-flask"></i>Reconocerá los avances tecnológicos que resultan beneficiosos para la ocupacion.</li>
-            <li><i class="fas fa-box"></i>Señalará las agencias y la política pública gubernamental relacionadas con la ocupación y los diferentes servicios que ofrecen.</li>
-            <li><i class="fas fa-chart-bar"></i>Demostrará las destrezas necesarioas para mejorar la calidad de vida de nuestras comunidades, con un especial énfasis en las zonas rurales y urbanas</li>
-            <li><i class="fas fa-tractor"></i>Estimará la importancia del desarrollo de la personalidad y las relaciones humanas de la ocupación.</li>
-            <li><i class="fas fa-shopping-cart"></i>Cobrará conciencia de la importancia de los valores, el proceso de toma de decisiones, la autoestima, el desarrollo en la ocupación y la vida personal para el logro de las metas.</li>
-            <li><i class="fas fa-recycle"></i>Aplicará las reglas de seguridad y sanidad concernientes a la ocupación y la vida humana.</li>
-            <li><i class="fas fa-utensils"></i>Seleccionará y utilizará las herramientas, los materiales y el equipo correctamente siguiendo las medidas de seguridad y mantenimiento de los mismos.</li>
+        <strong><p> La terminología relacionada a la ocupación:</p></strong>
+            <li><i class="fas fa-history"></i>Narrará el origen, la historia y el desarrollo de la ocupación.</li>
+            <li><i class="fas fa-microchip"></i>Reconocerá los avances tecnológicos que resultan beneficiosos para la ocupación.</li>
+            <li><i class="fas fa-building"></i>Señalará las agencias y la política pública gubernamental relacionadas con la ocupación y los diferentes servicios que ofrecen.</li>
+            <li><i class="fas fa-users"></i>Demostrará las destrezas necesarias para mejorar la calidad de vida de nuestras comunidades, con un especial énfasis en las zonas rurales y urbanas.</li>
+            <li><i class="fas fa-user-friends"></i>Estimará la importancia del desarrollo de la personalidad y las relaciones humanas de la ocupación.</li>
+            <li><i class="fas fa-brain"></i>Cobrará conciencia de la importancia de los valores, el proceso de toma de decisiones, la autoestima, el desarrollo en la ocupación y la vida personal para el logro de las metas.</li>
+            <li><i class="fas fa-shield-alt"></i>Aplicará las reglas de seguridad y sanidad concernientes a la ocupación y la vida humana.</li>
+            <li><i class="fas fa-tools"></i>Seleccionará y utilizará las herramientas, los materiales y el equipo correctamente siguiendo las medidas de seguridad y mantenimiento de los mismos.</li>
           </ul>
         </div>
       </div>
