--- a/enfermeria.html
+++ b/enfermeria.html
@@ -55,9 +55,9 @@
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 3.00 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre enfermeria</li>
-        <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio 3.00 en adelante.</li>
+        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre enfermería.</li>
+        <li><i class="fas fa-handshake"></i>Entrevista de admisión.</li>
       </ul>
     </div>
 
@@ -83,7 +83,7 @@
         </div>
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-ambulance"></i>Primeros ausilios y CPR</li>
+            <li><i class="fas fa-ambulance"></i>Primeros auxilios y CPR</li>
             <li><i class="fas fa-brain"></i>Salud mental</li>
             <li><i class="fas fa-microscope"></i>Microbiología</li>
             <li><i class="fas fa-gavel"></i>Ética y legislación</li>
@@ -101,12 +101,12 @@
           <ul class="feature-list">
             <li><i class="fas fa-hospital"></i>Enfermero/a hospitalario</li>
             <li><i class="fas fa-clinic-medical"></i>Enfermero/a de clínicas</li>
-            <li><i class="fas fa-icu"></i>Cuidados intensivos</li>
+            <li><i class="fas fa-stethoscope"></i>Cuidados intensivos</li>
             <li><i class="fas fa-home"></i>Enfermero/a domiciliario</li>
-             <li><i class="fas fa-hospital"></i>Enfermero en el ejercito</li>
+             <li><i class="fas fa-hospital"></i>Enfermero en el ejército</li>
             <li><i class="fas fa-clinic-medical"></i>Enfermero en laboratorio</li>
-            <li><i class="fas fa-icu"></i>Enfermeros en centros de envejecientes</li>
-            <li><i class="fas fa-home"></i>Enfermero/a pediatrico/a</li>
+            <li><i class="fas fa-hospital"></i>Enfermeros en centros de envejecientes</li>
+            <li><i class="fas fa-home"></i>Enfermero/a pedíatrico/a</li>
           </ul>
         </div>
         <div class="col-md-6">
