--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
   <section class="about" id="nosotros">
     <div class="container">
       <h2>Sobre Casa Abierta</h2>
-      <p>La Casa Abierta de la Escuela Superior Ocupacional Pablo Colón Berdecia es una experiencia única diseñada para mostrar la excelencia académica y las oportunidades que ofrece nuestra institución. Durante este evento, estudiantes, familias y la comunidad podrán conocer de cerca nuestros programas ocupacionales, talleres prácticos y proyectos innovadores que preparan a los jóvenes para el mundo laboral y universitario.</p>
+      <p>La Casa Abierta de la Escuela Superior Vocacional Pablo Colón Berdecia es una experiencia única diseñada para mostrar la excelencia académica y las oportunidades que ofrece nuestra institución. Durante este evento, estudiantes, familias y la comunidad podrán conocer de cerca nuestros programas ocupacionales, talleres prácticos y proyectos innovadores que preparan a los jóvenes para el mundo laboral y universitario.</p>
       <p>Además, se presentarán las instalaciones, recursos tecnológicos y actividades extracurriculares que fomentan el desarrollo integral del estudiante. Es la ocasión perfecta para descubrir cómo nuestra escuela impulsa el talento y la formación profesional en un ambiente dinámico y colaborativo.</p>
-      <p>“Descubre tu futuro hoy: ¡Ven a nuestra Casa Abierta!”<p>
+      <p>"Descubre tu futuro hoy" ¡Ven a nuestra Casa Abierta!<p>
     </div>
   </section>
 
