--- a/mercadeo.html
+++ b/mercadeo.html
@@ -91,13 +91,13 @@
       <h3><i class="fas fa-briefcase"></i>Oportunidades de Empleo</h3>
 <p><strong>Estudiantes que completan esta especialidad pueden desempeñarse en áreas como:</strong> </p>
       <ul class="feature-list text-center">
-        <li><i class="fas fa-handshake"></i>Representante de ventas</li>
-        <li><i class="fas fa-shopping-cart"></i>Asociado de servicio al cliente</li>
+        <li><i class="fas fa-handshake"></i>Representante de ventas.</li>
+        <li><i class="fas fa-shopping-cart"></i>Asociado de servicio al cliente.</li>
         <li><i class="fas fa-calculator"></i>Cajero/a</li>
-        <li><i class="fas fa-ad"></i>Promotor o merchandiser</li>
-        <li><i class="fas fa-users"></i>Auxiliar de oficina o asistente de mercadeo</li>
-        <li><i class="fas fa-box"></i>Empleos en tiendas por departamento, supermercados y empresas de servicios</li>
-        <li><i class="fas fa-cogs"></i>Posiciones iniciales en publicidad, inventario y ventas digitales</li>
+        <li><i class="fas fa-ad"></i>Promotor o merchandiser.</li>
+        <li><i class="fas fa-users"></i>Auxiliar de oficina o asistente de mercadeo.</li>
+        <li><i class="fas fa-box"></i>Empleos en tiendas por departamento, supermercados y empresas de servicios.</li>
+        <li><i class="fas fa-cogs"></i>Posiciones iniciales en publicidad, inventario y ventas digitales.</li>
       </ul>
     </div>
 
@@ -105,13 +105,13 @@
     <div class="info-card">
       <h3><i class="fas fa-book"></i>¿Por qué elegir Mercadeo?</h3>
       <ul class="feature-list text-center">
-        <li><i class="fas fa-handshake"></i>Es un taller dinámico, práctico y centrado en experiencias reales</li>
-        <li><i class="fas fa-shopping-cart"></i>Desarrolla destrezas esenciales que buscan todos los patrones</li>
-        <li><i class="fas fa-calculator"></i>Fortalece la comunicación, seguridad personal y liderazgo</li>
-        <li><i class="fas fa-ad"></i>Prepara para competencias y certificaciones a través de DECA</li>
-        <li><i class="fas fa-users"></i>Permite participar activamente en la Cooperativa Juvenil</li>
-        <li><i class="fas fa-box"></i>Amplía las oportunidades de empleo y estudios universitarios</li>
-        <li><i class="fas fa-cogs"></i>Forma estudiantes creativos, proactivos y preparados para el mundo laboral</li>
+        <li><i class="fas fa-handshake"></i>Es un taller dinámico, práctico y centrado en experiencias reales.</li>
+        <li><i class="fas fa-shopping-cart"></i>Desarrolla destrezas esenciales que buscan todos los patrones.</li>
+        <li><i class="fas fa-calculator"></i>Fortalece la comunicación, seguridad personal y liderazgo.</li>
+        <li><i class="fas fa-ad"></i>Prepara para competencias y certificaciones a través de DECA.</li>
+        <li><i class="fas fa-users"></i>Permite participar activamente en la Cooperativa Juvenil.</li>
+        <li><i class="fas fa-box"></i>Amplía las oportunidades de empleo y estudios universitarios.</li>
+        <li><i class="fas fa-cogs"></i>Forma estudiantes creativos, proactivos y preparados para el mundo laboral.</li>
 
     </div>
 
