--- a/seguridad-publica.html
+++ b/seguridad-publica.html
@@ -43,7 +43,7 @@
     <!-- Que es la seguridad publica -->
     <div class="info-card">
       <h3><i class="fas fa-shield-alt"></i>¿Qué es la Seguridad Pública?</h3>
-      <p>La seguridad pública es la protección que el Estado da a las personas y a sus derechos para que vivan en paz y sin peligros, y también es la tarea que todos debemos hacer para cuidar nuestra comunidad.</p>
+      <p>La seguridad pública es la protección que el estado da a las personas y a sus derechos para que vivan en paz y sin peligros, y también es la tarea que todos debemos hacer para cuidar nuestra comunidad.</p>
     </div>
 
     <!-- Proposito del taller -->
@@ -54,7 +54,7 @@
 
     <!-- Como parte del curriculo puedes aprender sobre -->
     <div class="info-card">
-      <h3><i class="fas fa-book"></i>Como parte del curriculo puedes aprender sobre:</h3>
+      <h3><i class="fas fa-book"></i>Como parte del currículo puedes aprender sobre:</h3>
       <ul class="feature-list">
        <li><i class="fas fa-shield-alt"></i>Seguridad Ciudadana</li>
        <li><i class="fas fa-building"></i>Administración Pública</li>
