--- a/computec.html
+++ b/computec.html
@@ -60,7 +60,7 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
         <li><i class="fas fa-graduation-cap"></i>Promedio 2.50 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Interes en aprender tecnología</li>
+        <li><i class="fas fa-birthday-cake"></i>Interés en aprender tecnología</li>
         <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
       </ul>
     </div>
@@ -80,7 +80,7 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
         <div class="col-md-6">
           <ul class="feature-list">
             <li><i class="fas fa-tools"></i>Reparación de computadoras y administración de redes.</li>
-            <li><i class="fas fa-bolt"></i>Electricidad basica tecnicos de computadora.</li>
+            <li><i class="fas fa-bolt"></i>Electricidad básica técnicos de computadora.</li>
             <li><i class="fas fa-database"></i>Data Recovery</li>
             <li><i class="fas fa-cloud"></i>Cloud computing</li>
             <li><i class="fas fa-shield-alt"></i>Cybersecurity</li>
