--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Casa Abierta - ¡Acho, la Pablo es otra cosa!</title>
+  <title>Casa Abierta - "¡Acho, la Pablo es otra cosa!"</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
@@ -34,7 +34,7 @@
   <section class="hero" id="inicio">
     <div class="container">
        <img src="LOGO6.png" alt="Logo CompuTec" class="header-gif">
-      <h1>Acho, la Pablo es otra cosa...</h1>
+      <h1>"Acho, la Pablo es otra cosa..."</h1>
       <h1>¡Casa Abierta PCB!</h1>
       <p>“Descubre tu futuro hoy" ¡Ven y visitanos!</p>
       <a href="#servicios" class="btn">Explorar Servicios</a>
