--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Casa Abierta - "¡Acho, la Pablo es otra cosa!"</title>
+  <title>Casa Abierta - ¡Acho, la Pablo es otra cosa!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
@@ -24,6 +24,7 @@
           <li class="nav-item"><a class="nav-link" href="#inicio"><i class="fas fa-home me-2"></i>Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="#servicios"><i class="fas fa-cogs me-2"></i>Servicios</a></li>
           <li class="nav-item"><a class="nav-link" href="#nosotros"><i class="fas fa-users me-2"></i>Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="#galeria"><i class="fas fa-images me-2"></i>Galería</a></li>
           <li class="nav-item"><a class="nav-link" href="#contacto"><i class="fas fa-envelope me-2"></i>Contacto</a></li>
         </ul>
       </div>
@@ -34,7 +35,7 @@
   <section class="hero" id="inicio">
     <div class="container">
        <img src="LOGO6.png" alt="Logo CompuTec" class="header-gif">
-      <h1>"Acho, la Pablo es otra cosa..."</h1>
+      <h1>Acho, la Pablo es otra cosa...</h1>
       <h1>¡Casa Abierta PCB!</h1>
       <p>“Descubre tu futuro hoy" ¡Ven y visitanos!</p>
       <a href="#servicios" class="btn">Explorar Servicios</a>
@@ -72,9 +73,177 @@
   <section class="about" id="nosotros">
     <div class="container">
       <h2>Sobre Casa Abierta</h2>
-      <p>La Casa Abierta de la Escuela Superior Vocacional Pablo Colón Berdecia es una experiencia única diseñada para mostrar la excelencia académica y las oportunidades que ofrece nuestra institución. Durante este evento, estudiantes, familias y la comunidad podrán conocer de cerca nuestros programas ocupacionales, talleres prácticos y proyectos innovadores que preparan a los jóvenes para el mundo laboral y universitario.</p>
+      <p>La Casa Abierta de la Escuela Superior Ocupacional Pablo Colón Berdecia es una experiencia única diseñada para mostrar la excelencia académica y las oportunidades que ofrece nuestra institución. Durante este evento, estudiantes, familias y la comunidad podrán conocer de cerca nuestros programas ocupacionales, talleres prácticos y proyectos innovadores que preparan a los jóvenes para el mundo laboral y universitario.</p>
       <p>Además, se presentarán las instalaciones, recursos tecnológicos y actividades extracurriculares que fomentan el desarrollo integral del estudiante. Es la ocasión perfecta para descubrir cómo nuestra escuela impulsa el talento y la formación profesional en un ambiente dinámico y colaborativo.</p>
-      <p>"Descubre tu futuro hoy" ¡Ven a nuestra Casa Abierta!<p>
+      <p>“Descubre tu futuro hoy: ¡Ven a nuestra Casa Abierta!”<p>
+    </div>
+  </section>
+
+  <!-- Gallery Slideshow -->
+  <section class="gallery-section" id="galeria">
+    <div class="container">
+      <h2>Nuestra Galería</h2>
+      <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+        <!-- Indicadores -->
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="2"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="3"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="4"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="5"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="6"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="7"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="8"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="9"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="10"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="11"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="12"></button>
+          <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="13"></button>
+        </div>
+
+        <!-- Slides -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="galeria/image.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 1">
+            <div class="carousel-caption">
+              <h5>Bienvenidos a Casa Abierta</h5>
+              <p>Descubre nuestras instalaciones</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image1.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 2">
+            <div class="carousel-caption">
+              <h5>Talleres Vocacionales</h5>
+              <p>Aprende con los mejores</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image2.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 3">
+            <div class="carousel-caption">
+              <h5>Estudiantes en Acción</h5>
+              <p>Formando el futuro</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image3.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 4">
+            <div class="carousel-caption">
+              <h5>Nuestras Instalaciones</h5>
+              <p>Tecnología de punta</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image4.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 5">
+            <div class="carousel-caption">
+              <h5>Comunidad Educativa</h5>
+              <p>Unidos por la educación</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image5.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 6">
+            <div class="carousel-caption">
+              <h5>Casa Abierta PCB</h5>
+              <p>Formando profesionales</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image6.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 7">
+            <div class="carousel-caption">
+              <h5>Nuestros Estudiantes</h5>
+              <p>El futuro de Puerto Rico</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image7.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 8">
+            <div class="carousel-caption">
+              <h5>Aprendizaje Práctico</h5>
+              <p>Manos a la obra</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image8.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 9">
+            <div class="carousel-caption">
+              <h5>Excelencia Educativa</h5>
+              <p>Preparándote para el éxito</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image9.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 10">
+            <div class="carousel-caption">
+              <h5>Innovación y Tecnología</h5>
+              <p>A la vanguardia</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/image10.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 11">
+            <div class="carousel-caption">
+              <h5>Trabajo en Equipo</h5>
+              <p>Juntos somos más fuertes</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/images17.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 12">
+            <div class="carousel-caption">
+              <h5>Actividades Especiales</h5>
+              <p>Aprendiendo y disfrutando</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/images18.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 13">
+            <div class="carousel-caption">
+              <h5>Nuestra Escuela</h5>
+              <p>Tu segundo hogar</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria/images21.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 14">
+            <div class="carousel-caption">
+              <h5>¡Ven a Conocernos!</h5>
+              <p>Te esperamos</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Controles -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Director Section -->
+  <section class="director-section" id="director">
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-4 col-md-5 text-center mb-4 mb-md-0">
+          <div class="director-photo">
+            <img src="galeria/imagesdirector1.JPG" alt="Director Escolar Israel López Rivera" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-7">
+          <div class="director-info">
+            <h3>Mensaje del Director</h3>
+            <h2>Israel López Rivera</h2>
+            <p class="director-title">Director Escolar</p>
+            <p class="director-message">
+              "Bienvenidos a la Escuela Superior Vocacional Pablo Colón Berdecia. Nuestra misión es formar
+              jóvenes capacitados con las destrezas técnicas y valores necesarios para triunfar en el mundo
+              laboral y continuar su desarrollo profesional. En nuestra escuela, cada estudiante encuentra
+              un espacio para crecer, aprender y alcanzar sus sueños. ¡Los esperamos con las puertas abiertas!"
+            </p>
+            <div class="director-signature">
+              <i class="fas fa-signature"></i>
+              <span>Israel López Rivera</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -85,19 +254,21 @@
       <div class="row">
         <div class="col-lg-5 col-md-10">
           <div class="contact-form">
-            <form>
-              <div class="mb-3"><input type="text" class="form-control" placeholder="Nombre completo" required></div>
-              <div class="mb-3"><input type="email" class="form-control" placeholder="Correo electrónico" required></div>
-              <div class="mb-3"><input type="tel" class="form-control" placeholder="Teléfono"></div>
-              <div class="mb-3"><textarea class="form-control" rows="5" placeholder="Mensaje" required></textarea></div>
-              <div class="text-center"><button type="submit" class="btn btn-submit">Enviar Mensaje</button></div>
+            <form id="contact-form">
+              <input type="hidden" name="_subject" value="Nuevo mensaje - Casa Abierta PCB">
+              <div class="mb-3"><input type="text" name="nombre" id="nombre" class="form-control" placeholder="Nombre completo" required></div>
+              <div class="mb-3"><input type="email" name="email" id="email" class="form-control" placeholder="Correo electrónico" required></div>
+              <div class="mb-3"><input type="tel" name="telefono" id="telefono" class="form-control" placeholder="Teléfono"></div>
+              <div class="mb-3"><textarea name="mensaje" id="mensaje" class="form-control" rows="5" placeholder="Mensaje" required></textarea></div>
+              <div class="text-center"><button type="submit" class="btn btn-submit" id="submit-btn">Enviar Mensaje</button></div>
             </form>
+            <div id="form-status" class="mt-3 text-center"></div>
           </div>
         </div>
         <div class="col-lg-5 col-md-10">
           <div class="contact-info">
             <div class="contact-item"><i class="fas fa-map-marker-alt"></i><p><strong>Dirección:</strong> Carretera 156 salida hacia Comerío, Barranquitas, P. R.</p></div>
-            <div class="contact-item"><i class="fas fa-phone"></i><p><strong>Teléfono:</strong> +1 787-857-2897</p></div>
+            <div class="contact-item"><i class="fas fa-phone"></i><p><strong>Teléfono:</strong> <a href="tel:+17878572897" class="contact-link">+1 787-857-2897</a></p></div>
             <div class="contact-item"><i class="fas fa-envelope"></i><p><strong>Email:</strong> de58390@miescuela.pr</p></div>
             <div class="contact-item"><i class="fas fa-clock"></i><p><strong>Horario:</strong> Lunes - Viernes: 7:30 AM - 2:30 PM</p></div>
           </div>
@@ -119,5 +290,139 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- EmailJS SDK -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+  <script type="text/javascript">
+    // Inicializar EmailJS con tu Public Key
+    (function() {
+      emailjs.init("mDtiMAcklOZwMjVPL"); // Reemplaza con tu Public Key de EmailJS
+    })();
+
+    // Manejar el envío del formulario
+    document.getElementById('contact-form').addEventListener('submit', function(event) {
+      event.preventDefault();
+
+      const submitBtn = document.getElementById('submit-btn');
+      const formStatus = document.getElementById('form-status');
+
+      // Deshabilitar botón mientras envía
+      submitBtn.disabled = true;
+      submitBtn.textContent = 'Enviando...';
+      formStatus.style.display = 'block';
+      formStatus.innerHTML = '<span style="color: #ffc107;">Enviando mensaje...</span>';
+
+      // Parámetros del email
+      const templateParams = {
+        to_email: 'computec.pcb@gmail.com',
+        from_name: document.getElementById('nombre').value,
+        from_email: document.getElementById('email').value,
+        telefono: document.getElementById('telefono').value,
+        message: document.getElementById('mensaje').value
+      };
+
+      // Enviar email usando EmailJS
+      // Reemplaza 'YOUR_SERVICE_ID' y 'YOUR_TEMPLATE_ID' con tus IDs de EmailJS
+      emailjs.send('service_aqtuyls', 'template_7p2gs13', templateParams)
+        .then(function(response) {
+          console.log('SUCCESS!', response.status, response.text);
+          formStatus.innerHTML = '<span style="color: #28a745;">¡Mensaje enviado exitosamente! Nos pondremos en contacto pronto.</span>';
+          document.getElementById('contact-form').reset();
+          submitBtn.disabled = false;
+          submitBtn.textContent = 'Enviar Mensaje';
+        }, function(error) {
+          console.log('FAILED...', error);
+          formStatus.innerHTML = '<span style="color: #dc3545;">Error al enviar el mensaje. Por favor, intenta de nuevo.</span>';
+          submitBtn.disabled = false;
+          submitBtn.textContent = 'Enviar Mensaje';
+        });
+    });
+  </script>
+
+ <!-- PCB System Popup -->
+  <div id="pcbSystemPopup" class="pcb-popup-overlay">
+    <div class="pcb-popup">
+      <div class="pcb-popup-header">
+        <div class="pcb-popup-icon">
+          <i class="fas fa-robot"></i>
+        </div>
+        <button class="pcb-popup-close" onclick="closePopup()">&times;</button>
+      </div>
+      <div class="pcb-popup-body">
+        <h3>🚀 ¡Próximamente!</h3>
+        <h2>PCB System</h2>
+        <p class="pcb-popup-subtitle">La plataforma inteligente de nuestra escuela</p>
+        <div class="pcb-popup-features">
+          <div class="pcb-feature">
+            <i class="fas fa-user-graduate"></i>
+            <span>Servicios al Estudiante</span>
+          </div>
+          <div class="pcb-feature">
+            <i class="fas fa-users"></i>
+            <span>Servicios a Padres</span>
+          </div>
+          <div class="pcb-feature">
+            <i class="fas fa-school"></i>
+            <span>Comunidad Escolar</span>
+          </div>
+          <div class="pcb-feature">
+            <i class="fas fa-brain"></i>
+            <span>Inteligencia Artificial</span>
+          </div>
+        </div>
+        <p class="pcb-popup-message">
+          Estamos desarrollando una plataforma innovadora que integrará <strong>Inteligencia Artificial</strong> para beneficio de toda nuestra comunidad educativa.
+        </p>
+        <button class="pcb-popup-btn" onclick="closePopup()">
+          <i class="fas fa-thumbs-up me-2"></i>¡Entendido!
+        </button>
+        <div class="pcb-popup-powered">
+          <span>Powered by</span>
+          <img src="galeria_computec/LogoLimpio4.png" alt="Computec Logo">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- PCB System Chatbot Minimized -->
+  <div id="pcbChatbot" class="pcb-chatbot" onclick="openPopup()">
+    <div class="pcb-chatbot-icon">
+      <i class="fas fa-robot"></i>
+    </div>
+    <div class="pcb-chatbot-badge">
+      <span>Próximamente</span>
+    </div>
+    <div class="pcb-chatbot-pulse"></div>
+    <div class="pcb-chatbot-logo">
+      <img src="galeria_computec/LogoLimpio4.png" alt="Computec">
+    </div>
+  </div>
+
+  <script>
+    // PCB System Popup Functions
+    function closePopup() {
+      document.getElementById('pcbSystemPopup').classList.remove('active');
+      document.getElementById('pcbChatbot').classList.add('visible');
+    }
+
+    function openPopup() {
+      document.getElementById('pcbSystemPopup').classList.add('active');
+      document.getElementById('pcbChatbot').classList.remove('visible');
+    }
+
+    // Show chatbot button after 1 second (with animation)
+    setTimeout(function() {
+      document.getElementById('pcbChatbot').classList.add('visible');
+    }, 1000);
+  </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
