--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Hero -->
   <section class="hero" id="inicio">
     <div class="container">
-       <img src="LOGO6.png" alt="Logo CompuTec" class="header-gif">
+       <img src="/Casa-Abierta/LOGO6.png" alt="Logo CompuTec" class="header-gif">
       <h1>Acho, la Pablo es otra cosa...</h1>
       <h1>¡Casa Abierta PCB!</h1>
       <p>“Descubre tu futuro hoy" ¡Ven y visitanos!</p>
@@ -418,6 +418,7 @@
   </script>
 </body>
 </html>
+
 
 
 
