--- a/artes-culinarias.html
+++ b/artes-culinarias.html
@@ -153,6 +153,7 @@
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="7"></button>
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="8"></button>
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="9"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="10"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -185,6 +186,9 @@
           <div class="carousel-item">
             <img src="galeria_artes_culinarias/images23.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 10">
           </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images11.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 11">
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#artesCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -208,6 +212,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
