--- a/artes-culinarias.html
+++ b/artes-culinarias.html
@@ -189,6 +189,45 @@
           <div class="carousel-item">
             <img src="galeria_artes_culinarias/images11.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 11">
           </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images12.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 12">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images13.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 13">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images14.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 14">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images15.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 15">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images16.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 16">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images17.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 17">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images18.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 18">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images19.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 19">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images20.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 20">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images21.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 21">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images22.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 22">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images23.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 23">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images24.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 24">
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#artesCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -212,6 +251,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
