--- a/artes-culinarias.html
+++ b/artes-culinarias.html
@@ -154,6 +154,19 @@
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="8"></button>
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="9"></button>
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="10"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="11"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="12"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="13"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="14"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="15"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="16"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="17"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="18"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="19"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="20"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="21"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="22"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="23"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -251,6 +264,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
