--- a/artes-culinarias.html
+++ b/artes-culinarias.html
@@ -167,6 +167,10 @@
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="21"></button>
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="22"></button>
           <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="23"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="24"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="25"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="26"></button>
+          <button type="button" data-bs-target="#artesCarousel" data-bs-slide-to="27"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -241,6 +245,17 @@
           <div class="carousel-item">
             <img src="galeria_artes_culinarias/images24.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 24">
           </div>
+             <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images25.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 25">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images26.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 26">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images27.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 27">
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_artes_culinarias/images28.jpg" class="d-block w-100" alt="Artes Culinarias - Imagen 28">
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#artesCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -264,6 +279,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
