--- a/enfermeria.html
+++ b/enfermeria.html
@@ -143,10 +143,11 @@
           <button type="button" data-bs-target="#enfermeriaCarousel" data-bs-slide-to="7"></button>
           <button type="button" data-bs-target="#enfermeriaCarousel" data-bs-slide-to="8"></button>
           <button type="button" data-bs-target="#enfermeriaCarousel" data-bs-slide-to="9"></button>
+          <button type="button" data-bs-target="#enfermeriaCarousel" data-bs-slide-to="10"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="galeria_enfermeria/image6.jpeg" class="d-block w-100" alt="Enfermería - Imagen 1">
+            <img src="galeria_enfermeria/image.jpeg" class="d-block w-100" alt="Enfermería - Imagen 1">
           </div>
           <div class="carousel-item">
             <img src="galeria_enfermeria/image2.jpeg" class="d-block w-100" alt="Enfermería - Imagen 2">
@@ -174,6 +175,9 @@
           </div>
           <div class="carousel-item">
             <img src="galeria_enfermeria/image10.jpeg" class="d-block w-100" alt="Enfermería - Imagen 10">
+             <div class="carousel-item">
+            <img src="galeria_enfermeria/image4.jpeg" class="d-block w-100" alt="Enfermería - Imagen 11">
+          </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#enfermeriaCarousel" data-bs-slide="prev">
@@ -198,6 +202,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
