--- a/elaboracion-agricolas.html
+++ b/elaboracion-agricolas.html
@@ -136,6 +136,7 @@
           <button type="button" data-bs-target="#agricolasCarousel" data-bs-slide-to="7"></button>
           <button type="button" data-bs-target="#agricolasCarousel" data-bs-slide-to="8"></button>
           <button type="button" data-bs-target="#agricolasCarousel" data-bs-slide-to="9"></button>
+          <button type="button" data-bs-target="#agricolasCarousel" data-bs-slide-to="10"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -168,6 +169,9 @@
           <div class="carousel-item">
             <img src="galeria_agricolas/images11.jpg" class="d-block w-100" alt="Elaboración de Productos Agrícolas - Imagen 10">
           </div>
+          <div class="carousel-item">
+            <img src="galeria_agricolas/images3.jpeg" class="d-block w-100" alt="Elaboración de Productos Agrícolas - Imagen 11">
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#agricolasCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -192,6 +196,7 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
