--- a/computec.html
+++ b/computec.html
@@ -147,6 +147,13 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
           <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="7"></button>
           <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="8"></button>
           <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="9"></button>
+          <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="10"></button>
+          <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="11"></button>
+          <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="12"></button>
+          <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="13"></button>
+          <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="14"></button>
+          <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="15"></button>
+          <button type="button" data-bs-target="#computecCarousel" data-bs-slide-to="16"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -179,6 +186,27 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
           <div class="carousel-item">
             <img src="galeria_computec/images20.jpeg" class="d-block w-100" alt="Computec - Imagen 10">
           </div>
+           <div class="carousel-item">
+            <img src="galeria_computec/images24.jpeg" class="d-block w-100" alt="Computec - Imagen 11">
+          </div>
+           <div class="carousel-item">
+            <img src="galeria_computec/images25.jpeg" class="d-block w-100" alt="Computec - Imagen 12">
+          </div>
+           <div class="carousel-item">
+            <img src="galeria_computec/images26.jpeg" class="d-block w-100" alt="Computec - Imagen 13">
+          </div>
+           <div class="carousel-item">
+            <img src="galeria_computec/images2.jpeg" class="d-block w-100" alt="Computec - Imagen 14">
+          </div>
+           <div class="carousel-item">
+            <img src="galeria_computec/images19.jpeg" class="d-block w-100" alt="Computec - Imagen 15">
+          </div>
+           <div class="carousel-item">
+            <img src="galeria_computec/images18.jpeg" class="d-block w-100" alt="Computec - Imagen 16">
+          </div>
+           <div class="carousel-item">
+            <img src="galeria_computec/images11.jpeg" class="d-block w-100" alt="Computec - Imagen 17">
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#computecCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -202,6 +230,7 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
