--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria/image2.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 13">
+            <img src="galeria_artes_culinarias/image27.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 13">
             <div class="carousel-caption">
               <h5>Nuestra Escuela</h5>
               <p>Tu segundo hogar</p>
@@ -418,6 +418,7 @@
   </script>
 </body>
 </html>
+
 
 
 
