--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="11"></button>
           <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="12"></button>
           <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="13"></button>
+            <button type="button" data-bs-target="#galleryCarousel" data-bs-slide-to="14"></button>
         </div>
 
         <!-- Slides -->
@@ -196,10 +197,17 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria/image4.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 14">
+            <img src="galeria_cosmetologia/images32.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 14">
             <div class="carousel-caption">
               <h5>¡Ven a Conocernos!</h5>
               <p>Te esperamos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="galeria_agricolas/images90.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 15">
+            <div class="carousel-caption">
+              <h5>Nuestra Escuela</h5>
+              <p>Tu segundo hogar</p>
             </div>
           </div>
         </div>
@@ -418,6 +426,7 @@
   </script>
 </body>
 </html>
+
 
 
 
