--- a/index.html
+++ b/index.html
@@ -162,21 +162,21 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria/image17.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 9">
+            <img src="galeria/images17.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 9">
             <div class="carousel-caption">
               <h5>Excelencia Educativa</h5>
               <p>Preparándote para el éxito</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria_cosmetologia/image14.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 10">
+            <img src="galeria_cosmetologia/images14.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 10">
             <div class="carousel-caption">
               <h5>Innovación y Tecnología</h5>
               <p>A la vanguardia</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria_mercadeo/image1.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 11">
+            <img src="galeria_mercadeo/images1.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 11">
             <div class="carousel-caption">
               <h5>Trabajo en Equipo</h5>
               <p>Juntos somos más fuertes</p>
@@ -426,6 +426,7 @@
   </script>
 </body>
 </html>
+
 
 
 
