--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria_mercadeo/images1.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 11">
+            <img src="galeria_mercadeo/images1.PNG" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 11">
             <div class="carousel-caption">
               <h5>Trabajo en Equipo</h5>
               <p>Juntos somos más fuertes</p>
@@ -197,7 +197,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria_cosmetologia/images32.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 14">
+            <img src="galeria_cosmetologia/images30.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 14">
             <div class="carousel-caption">
               <h5>¡Ven a Conocernos!</h5>
               <p>Te esperamos</p>
@@ -426,6 +426,7 @@
   </script>
 </body>
 </html>
+
 
 
 
