--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- Slides -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="LOGO6.png" class="d-block w-100" alt="Casa Abierta - Imagen 1">
+            <img src="LOGO6.png" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 1">
             <div class="carousel-caption">
               <h5>Bienvenidos a Casa Abierta</h5>
               <p>Descubre nuestras instalaciones</p>
@@ -120,28 +120,28 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria/image7.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 3">
+            <img src="galeria/image7.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 3">
             <div class="carousel-caption">
               <h5>Estudiantes en Acción</h5>
               <p>Formando el futuro</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria/image10.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 4">
+            <img src="galeria/image10.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 4">
             <div class="carousel-caption">
               <h5>Nuestras Instalaciones</h5>
               <p>Tecnología de punta</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria/image6.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 5">
+            <img src="galeria/image6.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 5">
             <div class="carousel-caption">
               <h5>Comunidad Educativa</h5>
               <p>Unidos por la educación</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria/image8.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 6">
+            <img src="galeria/image8.jpeg" class="d-block w-100 img-centered" alt="Casa Abierta - Imagen 6">
             <div class="carousel-caption">
               <h5>Casa Abierta PCB</h5>
               <p>Formando profesionales</p>
@@ -426,6 +426,7 @@
   </script>
 </body>
 </html>
+
 
 
 
