--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="galeria_artes_culinarias/images27.jpeg" class="d-block w-100" alt="Casa Abierta - Imagen 13">
+            <img src="galeria_artes_culinarias/images27.jpg" class="d-block w-100" alt="Casa Abierta - Imagen 13">
             <div class="carousel-caption">
               <h5>Nuestra Escuela</h5>
               <p>Tu segundo hogar</p>
@@ -426,6 +426,7 @@
   </script>
 </body>
 </html>
+
 
 
 
